--- a/Fincas.Backend/Views/Shared/_Layout.cshtml
+++ b/Fincas.Backend/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Servicios" asp-action="Index">Servicios</a></li>
+                    <li><a asp-area="" asp-controller="Productos" asp-action="Index">Productos</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
