--- a/Fincas.Backend/Views/Productos/Index.cshtml
+++ b/Fincas.Backend/Views/Productos/Index.cshtml
@@ -16,9 +16,6 @@
                 @Html.DisplayNameFor(model => model.Nombre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ServicioId)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Precio)
             </th>
             <th>
@@ -26,6 +23,12 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Publicado)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Servicio)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Diaspublicado)
             </th>
             <th></th>
         </tr>
@@ -37,9 +40,6 @@
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ServicioId)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Precio)
             </td>
             <td>
@@ -47,6 +47,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Publicado)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Servicio.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Diaspublicado)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductoId">Edit</a> |
